Update task3.md